--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: index
-title: Helium Jekyll
+title: TKVTV
 tagline: Bootstrap 4 UI kit for Jekyll
 css: 
 js: sliders.js
 keywords: helium, jekyll, bootstrap, UI, kit
-canonical: https://heliumjk.github.io
+canonical: https://takagotch.github.io/page116/
 ---
 {% include JB/setup %}
 <!-- Content Area Start -->
