--- a/about-sample.html
+++ b/about-sample.html
@@ -9,7 +9,7 @@ author : Antonio Trento
 css: 
 js: about-sample.js
 keywords: components, demo
-canonical: https://heliumjk.github.io
+canonical: https://takagotch.github.io/page116/
 ---
 {% include JB/setup %}
     <!-- Content Area Start -->
